--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ requires-python = ">=3.8"
 dependencies = [
     "scanpy>=1.9.5",
     "leidenalg>=0.10.1",
-    "python-igraph>=0.10.8",
+    "igraph>=0.10.8",
     "gseapy>=1.1.2"
 ]
 classifiers = [
