--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "sctoolsgw"
-version = "0.0.5"
+version = "0.1.0"
 authors = [
     { name="Griffen Wakelin", email="wakelin@dal.ca" }
 ]
@@ -14,7 +14,9 @@ dependencies = [
     "scanpy>=1.9.5",
     "leidenalg>=0.10.1",
     "python-igraph>=0.10.8",
-    "gseapy>=1.1.2"
+    "gseapy>=1.1.2",
+    "pydeseq2>=0.4.12",
+    "decoupler>=1.8.0"
 ]
 classifiers = [
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
