--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,8 @@ dependencies = [
     "python-igraph>=0.10.8",
     "gseapy>=1.1.2",
     "pydeseq2>=0.4.12",
-    "decoupler>=1.8.0"
+    "decoupler>=1.8.0",
+    "bbknn>=1.6.0",
 ]
 classifiers = [
     "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
